# create_a_moment

./: README.md  pyproject.toml  setup.py
create_a_moment/: hooks.py  install.py
create_a_moment-master/: MANIFEST.in  pyproject.toml
create_a_moment-master/create_a_moment/: modules.txt  patches.txt
create_a_moment-master/create_a_moment/config/: desktop.py
create_a_moment-master/create_a_moment/create_a_moment/doctype/inquiry/: test_inquiry.py
create_a_moment-master/create_a_moment/create_a_moment/doctype/trip/: trip.js
create_a_moment-master/create_a_moment/create_a_moment/doctype/trip_event/: test_trip_event.py  trip_event.js  trip_event.json
create_a_moment-master/create_a_moment/patches/: set_trip_event_owner.py
create_a_moment-master/create_a_moment/public/js/: create_a_moment.js
create_a_moment/api/: address.py
create_a_moment/config/: docs.py
create_a_moment/create_a_moment/custom/: notification.json
create_a_moment/create_a_moment/doctype/inquiry/: inquiry.js  inquiry.json
create_a_moment/create_a_moment/doctype/trip/: trip.py
create_a_moment/create_a_moment/doctype/trip_event/: trip_event.py  trip_event_calendar.js
create_a_moment/doctype/inquiry/: inquiry.py
create_a_moment/doctype/trip/: test_trip.py  trip.json
create_a_moment/fixtures/: role.json
create_a_moment/workspace/create_a_moment/: create_a_moment.json
create_a_moment/www/: me.html  me.py
