[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "create_a_moment"
version = "0.0.1"
description = "Custom ERPNext App"
authors = [
  { name = "ALYF GmbH", email = "hallo@alyf.de" }
]

[tool.frappe]
app_name = "create_a_moment"
app_title = "Create A Moment"
app_publisher = "ALYF GmbH"
app_email = "hallo@alyf.de"
app_license = "MIT"
